fix 5 minutes gap

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1977,7 +1977,7 @@
 
 .frameParent9 {
   align-items: center;
-  gap: 44px;
+  gap: var(--gap-xl);
   text-align: left;
   flex-wrap: wrap;
 }
